[gd_scene load_steps=5 format=3 uid="uid://do14sdvibpe0k"]

[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/TweenAnimationEditorBase.gd" id="1_c8gub"]
[ext_resource type="PackedScene" uid="uid://c5al8etaem6a6" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/ObjectEdit.tscn" id="2_es7qw"]
[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/EditorButton.gd" id="2_ls5q1"]
[ext_resource type="StyleBox" uid="uid://d1xmdsfvcu5yl" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/Panel.tres" id="4_aoydb"]

[node name="Tweens" type="HBoxContainer"]
offset_right = 321.0
offset_bottom = 179.0
script = ExtResource("1_c8gub")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Test Play Root Node"
horizontal_alignment = 1

[node name="RootPathEdit" parent="VBoxContainer" instance=ExtResource("2_es7qw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Play"
script = ExtResource("2_ls5q1")
icon_name = &"Play"

[node name="Stop" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Stop"
script = ExtResource("2_ls5q1")
icon_name = &"Stop"

[node name="AnimationView" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4_aoydb")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="play_animation"]
[connection signal="pressed" from="VBoxContainer/Stop" to="." method="stop_animation"]
